Adding test for versioning, adding scheduling task, fixing db conflict
